# Voidfall

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Voidfall.Milestone.1.odt  Voidfall.sln
GLFW/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
GLFW/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  boing.vcxproj  boing.vcxproj.filters  cmake_install.cmake  gears.vcxproj  (+15 more)
OpenALSoft/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  OpenAL.sln  OpenAL.vcxproj  OpenAL.vcxproj.filters  OpenALConfig.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  alrecord.vcxproj  alrecord.vcxproj.filters  altonegen.vcxproj  altonegen.vcxproj.filters  cmake_install.cmake  common.vcxproj  common.vcxproj.filters  config.h  ex-common.vcxproj  ex-common.vcxproj.filters  openal-info.vcxproj  openal-info.vcxproj.filters
Setup/: setup_x64.bat
Vf/: .leu  Vf.sln
Voidfall/: .gitattributes  .gitignore  Audio.cpp  Audio.h  CMakeLists.txt  CacheLine.h  CicularFIFO.h  CircularFIFO.h  Debug.h  Entity.h  Game.cpp  Game.h  README.md  Scene.h  SceneManager.h  TaskSystem.cpp  TaskSystem.h  USRArray.h  VoidEngine.h  VoidWindow.h  Voidfall.Milestone.1.odt  Voidfall.sln  Voidfall.vcxproj  Voidfall.vcxproj.filters  WindowManager.cpp  WindowManager.h  debug.h  main.cpp  shader.cpp  shader.fs  shader.h  shader.vs  stb_image.h
(+601 files in other folders)
